--- a/index.html
+++ b/index.html
@@ -108,48 +108,48 @@
             </div>
             <div class="audios">
                 <div class="fila" data-section="volumen-armonia"> <!-- Armonía -->
-                    <button class="selector" id="selector1" data-audio="Audios/canto-maguaré.mp3"></button>
-                    <button class="selector" id="selector2"  data-audio=""></button>
+                    <button class="selector armonia" id="selector1" data-audio="Audios/canto-maguaré.mp3"></button>
+                    <button class="selector armonia" id="selector2"  data-audio=""></button>
                 </div>
                 <div class="fila" data-section="volumen-melodia"><!-- Melodía -->
-                    <button class="selector" id="selector3" data-audio="Audios/canto-a-yoi.mp3"></button>
-                    <button class="selector" id="selector4" data-audio="Audios/marimba-currulao.mp3"></button>
-                    <button class="selector" id="selector5" data-audio="Audios/musica_arpa_2.mp3"></button>
-                    <button class="selector" id="selector6" data-audio="Audios/musica_joropo_arpa.mp3"></button>
+                    <button class="selector melodia" id="selector3" data-audio="Audios/canto-a-yoi.mp3"></button>
+                    <button class="selector melodia" id="selector4" data-audio="Audios/marimba-currulao.mp3"></button>
+                    <button class="selector melodia" id="selector5" data-audio="Audios/musica_arpa_2.mp3"></button>
+                    <button class="selector melodia" id="selector6" data-audio="Audios/musica_joropo_arpa.mp3"></button>
                 </div>
                 <div class="fila" data-section="volumen-ritmo"><!-- Ritmo -->
-                    <button class="selector" id="selector7" data-audio="Audios/porro-tambor-alegre.mp3"></button>
-                    <button class="selector" id="selector8" data-audio="Audios/secar-cacao.mp3"></button>
-                    <button class="selector" id="selector9" data-audio="Audios/marimba-2.mp3"></button>
-                    <button class="selector" id="selector10" data-audio="Audios/cacerolazo.mp3"></button>
+                    <button class="selector ritmo" id="selector7" data-audio="Audios/porro-tambor-alegre.mp3"></button>
+                    <button class="selector ritmo" id="selector8" data-audio="Audios/secar-cacao.mp3"></button>
+                    <button class="selector ritmo" id="selector9" data-audio="Audios/marimba-2.mp3"></button>
+                    <button class="selector ritmo" id="selector10" data-audio="Audios/cacerolazo.mp3"></button>
                 </div>
                 <div class="fila" data-section="volumen-fondo"><!-- Fondo -->
-                    <button class="selector" id="selector11" data-audio="Audios/llovizna-noche-selva.mp3"></button>
-                    <button class="selector" id="selector12" data-audio="Audios/rio-loretoyacu.mp3"></button>
-                    <button class="selector" id="selector13" data-audio="Audios/gol-del-junior.mp3"></button>
-                    <button class="selector" id="selector14" data-audio="Audios/ppn-sanquianga.mp3"></button>
-                    <button class="selector" id="selector15" data-audio="Audios/trapiche-de-cana.mp3"></button>
-                    <button class="selector" id="selector16" data-audio="Audios/canon_gaviotas_agua_dos_quebradas.mp3"></button>
-                    <button class="selector" id="selector17" data-audio=""></button>
-                    <button class="selector" id="selector18" data-audio=""></button>
+                    <button class="selector fondo" id="selector11" data-audio="Audios/llovizna-noche-selva.mp3"></button>
+                    <button class="selector fondo" id="selector12" data-audio="Audios/rio-loretoyacu.mp3"></button>
+                    <button class="selector fondo" id="selector13" data-audio="Audios/gol-del-junior.mp3"></button>
+                    <button class="selector fondo" id="selector14" data-audio="Audios/ppn-sanquianga.mp3"></button>
+                    <button class="selector fondo" id="selector15" data-audio="Audios/trapiche-de-cana.mp3"></button>
+                    <button class="selector fondo" id="selector16" data-audio="Audios/canon_gaviotas_agua_dos_quebradas.mp3"></button>
+                    <button class="selector fondo" id="selector17" data-audio=""></button>
+                    <button class="selector fondo" id="selector18" data-audio=""></button>
                 </div>
                 <div class="fila" data-section="volumen-adornos"><!-- Adornos -->
-                    <button class="selector" id="selector19" data-audio="Audios/peque-peque.mp3"></button>
-                    <button class="selector" id="selector20" data-audio="Audios/meneando-mijo.mp3"></button>
-                    <button class="selector" id="selector21" data-audio="Audios/panochas.mp3"></button>
-                    <button class="selector" id="selector22" data-audio="Audios/20-julio_A_trescientos.mp3"></button>
-                    <button class="selector" id="selector23" data-audio="Audios/20-julio_A la orden veci.mp3"></button>
-                    <button class="selector" id="selector24" data-audio="Audios/20-julio_Buzo, gorra, mallas.mp3"></button>
-                    <button class="selector" id="selector25" data-audio="Audios/20-julio_Medias.mp3"></button>
-                    <button class="selector" id="selector26" data-audio="Audios/20-julio_Por este ladito.mp3"></button>
-                    <button class="selector" id="selector27" data-audio="Audios/20-julio_Bienvenidos sigan.mp3"></button>
-                    <button class="selector" id="selector28" data-audio="Audios/paro-nac_Ambulancia.mp3"></button>
-                    <button class="selector" id="selector29" data-audio="Audios/paro-nac_Arengas.mp3"></button>
-                    <button class="selector" id="selector30" data-audio="Audios/paro-nac_Pito y tambores.mp3"></button>
-                    <button class="selector" id="selector31" data-audio="Audios/paro-nac_Por nuestros muertos.mp3"></button>
-                    <button class="selector" id="selector32" data-audio="Audios/musica_arpa_4.mp3"></button>
-                    <button class="selector" id="selector33" data-audio="Audios/putumayo_sonido_pajaro.mp3"></button>
-                    <button class="selector" id="selector34" data-audio=""></button>
+                    <button class="selector adornos" id="selector19" data-audio="Audios/peque-peque.mp3"></button>
+                    <button class="selector adornos" id="selector20" data-audio="Audios/meneando-mijo.mp3"></button>
+                    <button class="selector adornos" id="selector21" data-audio="Audios/panochas.mp3"></button>
+                    <button class="selector adornos" id="selector22" data-audio="Audios/20-julio_A_trescientos.mp3"></button>
+                    <button class="selector adornos" id="selector23" data-audio="Audios/20-julio_A la orden veci.mp3"></button>
+                    <button class="selector adornos" id="selector24" data-audio="Audios/20-julio_Buzo, gorra, mallas.mp3"></button>
+                    <button class="selector adornos" id="selector25" data-audio="Audios/20-julio_Medias.mp3"></button>
+                    <button class="selector adornos" id="selector26" data-audio="Audios/20-julio_Por este ladito.mp3"></button>
+                    <button class="selector adornos" id="selector27" data-audio="Audios/20-julio_Bienvenidos sigan.mp3"></button>
+                    <button class="selector adornos" id="selector28" data-audio="Audios/paro-nac_Ambulancia.mp3"></button>
+                    <button class="selector adornos" id="selector29" data-audio="Audios/paro-nac_Arengas.mp3"></button>
+                    <button class="selector adornos" id="selector30" data-audio="Audios/paro-nac_Pito y tambores.mp3"></button>
+                    <button class="selector adornos" id="selector31" data-audio="Audios/paro-nac_Por nuestros muertos.mp3"></button>
+                    <button class="selector adornos" id="selector32" data-audio="Audios/musica_arpa_4.mp3"></button>
+                    <button class="selector adornos" id="selector33" data-audio="Audios/putumayo_sonido_pajaro.mp3"></button>
+                    <button class="selector adornos" id="selector34" data-audio=""></button>
                 </div>
             </div>
         </div>
