--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/audiobuffer-to-wav@1.0.0/index.min.js"></script>
     <script src="scripts.js"></script>
     <script src="deslizador-circular.js"></script>
 </body>
