--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
                     </div>
                 </div>
             </div>
-            <div class="visualizador"></div>
+            <div class="visualizador">
+                <img src="Imagenes/etno-dj.jpg" alt="Visualizador EtnoDJ" style="max-width: 100%; max-height: 100%; border-radius: 12px;">
+            </div>            
         </div>
 
         <div class="selectores-audios">
