--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="visualizador">
-                <img src="Imagenes/etno-dj.jpg" alt="Visualizador EtnoDJ" style="max-width: 100%; max-height: 100%; border-radius: 12px;">
+                <img src="Imagenes/etno-dj.png" alt="Visualizador EtnoDJ" style="max-width: 100%; max-height: 100%; border-radius: 12px;">
             </div>            
         </div>
 
