--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="control-actuadores">
                     <div class="controles-reproduccion">
                         <button id="encender"><i class="fa-solid fa-power-off"></i></button>
-                        <button id="reiniciar"><i class="fa-solid fa-play"></i></button>
+                        <button id="detener"><i class="fa-solid fa-play"></i></button>
                         <button id="grabar"><i class="fa-solid fa-circle"></i></button>
                         <button id="descargar" disabled><i class="fa-solid fa-download"></i></button>
                     </div>
