--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="fila" data-section="volumen-ritmo"><!-- Ritmo -->
                     <button class="selector ritmo" id="selector7" data-audio="Audios/porro-tambor-alegre.mp3"></button>
                     <button class="selector ritmo" id="selector8" data-audio="Audios/secar-cacao.mp3"></button>
-                    <button class="selector ritmo" id="selector9" data-audio="Audios/marimba-2.mp3"></button>
+                    <button class="selector ritmo" id="selector9" data-audio="Audios/marimba_3.wav"></button>
                     <button class="selector ritmo" id="selector10" data-audio="Audios/cacerolazo.mp3"></button>
                 </div>
                 <div class="fila" data-section="volumen-fondo"><!-- Fondo -->
