Visualizacion nombre de audios

--- a/index.html
+++ b/index.html
@@ -101,56 +101,54 @@
                 </div>
             </div>
              <div class="visualizador">
-                <img src="/Imagenes/etno-dj.png" alt="Visualizador EtnoDJ" style="max-width: 80%; max-height: 80%; border-radius: 12px;">
+                <!-- La imagen ha sido eliminada. El contenido se generará con JS. -->
             </div>
         </div>
 
         <div class="selectores-audios">
-            <div class="audios">
-                <div class="fila" data-section="volumen-armonia">
-                    <button class="selector armonia" id="selector1" data-audio="Audios/canto-maguaré.mp3"></button>
-                    <button class="selector armonia" id="selector2"  data-audio=""></button>
-                </div>
-                <div class="fila" data-section="volumen-melodia">
-                    <button class="selector melodia" id="selector3" data-audio="Audios/canto-a-yoi.mp3"></button>
-                    <button class="selector melodia" id="selector4" data-audio="Audios/musica_pueblo_arhuaco.mp3"></button>
-                    <button class="selector melodia" id="selector5" data-audio="Audios/pasillo_transmilenio.mp3"></button>
-                    <button class="selector melodia" id="selector6" data-audio="Audios/musica_joropo_arpa.mp3"></button>
-                </div>
-                <div class="fila" data-section="volumen-ritmo">
-                    <button class="selector ritmo" id="selector7" data-audio="Audios/porro-tambor-alegre.mp3"></button>
-                    <button class="selector ritmo" id="selector8" data-audio="Audios/secar-cacao.mp3"></button>
-                    <button class="selector ritmo" id="selector9" data-audio="Audios/marimba-2.mp3"></button>
-                    <button class="selector ritmo" id="selector10" data-audio="Audios/cacerolazo.mp3"></button>
-                </div>
-                <div class="fila" data-section="volumen-fondo">
-                    <button class="selector fondo" id="selector11" data-audio="Audios/llovizna-noche-selva.mp3"></button>
-                    <button class="selector fondo" id="selector12" data-audio="Audios/rio-loretoyacu.mp3"></button>
-                    <button class="selector fondo" id="selector13" data-audio="Audios/gol-del-junior.mp3"></button>
-                    <button class="selector fondo" id="selector14" data-audio="Audios/ppn-sanquianga.mp3"></button>
-                    <button class="selector fondo" id="selector15" data-audio="Audios/trapiche-de-cana.mp3"></button>
-                    <button class="selector fondo" id="selector16" data-audio="Audios/canon_gaviotas_agua_dos_quebradas.mp3"></button>
-                    <button class="selector fondo" id="selector17" data-audio="Audios/peque-peque.mp3"></button>
-                    <button class="selector fondo" id="selector18" data-audio=""></button>
-                </div>
-                <div class="fila" data-section="volumen-adornos">
-                    <button class="selector adornos" id="selector19" data-audio="Audios/me-falta-mi-gente.mp3"></button>
-                    <button class="selector adornos" id="selector20" data-audio="Audios/meneando-mijo.mp3"></button>
-                    <button class="selector adornos" id="selector21" data-audio="Audios/panochas.mp3"></button>
-                    <button class="selector adornos" id="selector22" data-audio="Audios/Gallo.mp3"></button>
-                    <button class="selector adornos" id="selector23" data-audio="Audios/20-julio_A la orden veci.mp3"></button>
-                    <button class="selector adornos" id="selector24" data-audio="Audios/20-julio_Buzo, gorra, mallas.mp3"></button>
-                    <button class="selector adornos" id="selector25" data-audio="Audios/20-julio_Medias.mp3"></button>
-                    <button class="selector adornos" id="selector26" data-audio="Audios/20-julio_A_trescientos.mp3"></button>
-                    <button class="selector adornos" id="selector27" data-audio="Audios/20-julio_Por este ladito.mp3"></button>
-                    <button class="selector adornos" id="selector28" data-audio="Audios/20-julio_Bienvenidos sigan.mp3"></button>
-                    <button class="selector adornos" id="selector29" data-audio="Audios/paro-nac_Arengas.mp3"></button>
-                    <button class="selector adornos" id="selector30" data-audio="Audios/paro-nac_Pito y tambores.mp3"></button>
-                    <button class="selector adornos" id="selector31" data-audio="Audios/paro-nac_Por nuestros muertos.mp3"></button>
-                    <button class="selector adornos" id="selector32" data-audio="Audios/musica_arpa_2.mp3"></button>
-                    <button class="selector adornos" id="selector33" data-audio="Audios/putumayo_sonido_pajaro.mp3"></button>
-                    <button class="selector adornos" id="selector34" data-audio="Audios/Prestame-el-rompope.mp3"></button>
-                </div>
+            <div class="fila" data-section="volumen-armonia">
+                <button class="selector armonia" id="selector1" data-audio="Audios/canto-maguaré.mp3"></button>
+                <button class="selector armonia" id="selector2"  data-audio=""></button>
+            </div>
+            <div class="fila" data-section="volumen-melodia">
+                <button class="selector melodia" id="selector3" data-audio="Audios/canto-a-yoi.mp3"></button>
+                <button class="selector melodia" id="selector4" data-audio="Audios/musica_pueblo_arhuaco.mp3"></button>
+                <button class="selector melodia" id="selector5" data-audio="Audios/pasillo_transmilenio.mp3"></button>
+                <button class="selector melodia" id="selector6" data-audio="Audios/musica_joropo_arpa.mp3"></button>
+            </div>
+            <div class="fila" data-section="volumen-ritmo">
+                <button class="selector ritmo" id="selector7" data-audio="Audios/porro-tambor-alegre.mp3"></button>
+                <button class="selector ritmo" id="selector8" data-audio="Audios/secar-cacao.mp3"></button>
+                <button class="selector ritmo" id="selector9" data-audio="Audios/marimba-2.mp3"></button>
+                <button class="selector ritmo" id="selector10" data-audio="Audios/cacerolazo.mp3"></button>
+            </div>
+            <div class="fila" data-section="volumen-fondo">
+                <button class="selector fondo" id="selector11" data-audio="Audios/llovizna-noche-selva.mp3"></button>
+                <button class="selector fondo" id="selector12" data-audio="Audios/rio-loretoyacu.mp3"></button>
+                <button class="selector fondo" id="selector13" data-audio="Audios/gol-del-junior.mp3"></button>
+                <button class="selector fondo" id="selector14" data-audio="Audios/ppn-sanquianga.mp3"></button>
+                <button class="selector fondo" id="selector15" data-audio="Audios/trapiche-de-cana.mp3"></button>
+                <button class="selector fondo" id="selector16" data-audio="Audios/canon_gaviotas_agua_dos_quebradas.mp3"></button>
+                <button class="selector fondo" id="selector17" data-audio="Audios/peque-peque.mp3"></button>
+                <button class="selector fondo" id="selector18" data-audio=""></button>
+            </div>
+            <div class="fila" data-section="volumen-adornos">
+                <button class="selector adornos" id="selector19" data-audio="Audios/me-falta-mi-gente.mp3"></button>
+                <button class="selector adornos" id="selector20" data-audio="Audios/meneando-mijo.mp3"></button>
+                <button class="selector adornos" id="selector21" data-audio="Audios/panochas.mp3"></button>
+                <button class="selector adornos" id="selector22" data-audio="Audios/Gallo.mp3"></button>
+                <button class="selector adornos" id="selector23" data-audio="Audios/20-julio_A la orden veci.mp3"></button>
+                <button class="selector adornos" id="selector24" data-audio="Audios/20-julio_Buzo, gorra, mallas.mp3"></button>
+                <button class="selector adornos" id="selector25" data-audio="Audios/20-julio_Medias.mp3"></button>
+                <button class="selector adornos" id="selector26" data-audio="Audios/20-julio_A_trescientos.mp3"></button>
+                <button class="selector adornos" id="selector27" data-audio="Audios/20-julio_Por este ladito.mp3"></button>
+                <button class="selector adornos" id="selector28" data-audio="Audios/20-julio_Bienvenidos sigan.mp3"></button>
+                <button class="selector adornos" id="selector29" data-audio="Audios/paro-nac_Arengas.mp3"></button>
+                <button class="selector adornos" id="selector30" data-audio="Audios/paro-nac_Pito y tambores.mp3"></button>
+                <button class="selector adornos" id="selector31" data-audio="Audios/paro-nac_Por nuestros muertos.mp3"></button>
+                <button class="selector adornos" id="selector32" data-audio="Audios/musica_arpa_2.mp3"></button>
+                <button class="selector adornos" id="selector33" data-audio="Audios/putumayo_sonido_pajaro.mp3"></button>
+                <button class="selector adornos" id="selector34" data-audio="Audios/Prestame-el-rompope.mp3"></button>
             </div>
         </div>
     </div>
