--- a/index.html
+++ b/index.html
@@ -107,48 +107,48 @@
 
         <div class="selectores-audios">
             <div class="fila" data-section="volumen-armonia">
-                <button class="selector armonia" id="selector1" data-audio="Audios/canto-maguaré.mp3"></button>
+                <button class="selector armonia" id="selector1" data-audio="Audios/Canto_Maguaré.mp3"></button>
                 <button class="selector armonia" id="selector2"  data-audio=""></button>
             </div>
             <div class="fila" data-section="volumen-melodia">
-                <button class="selector melodia" id="selector3" data-audio="Audios/canto-a-yoi.mp3"></button>
-                <button class="selector melodia" id="selector4" data-audio="Audios/musica_pueblo_arhuaco.mp3"></button>
-                <button class="selector melodia" id="selector5" data-audio="Audios/pasillo_transmilenio.mp3"></button>
-                <button class="selector melodia" id="selector6" data-audio="Audios/musica_joropo_arpa.mp3"></button>
+                <button class="selector melodia" id="selector3" data-audio="Audios/Canto_a_Yoi.mp3"></button>
+                <button class="selector melodia" id="selector4" data-audio="Audios/Musica_pueblo_Arhuaco.mp3"></button>
+                <button class="selector melodia" id="selector5" data-audio="Audios/Musica_Transmilenio.mp3"></button>
+                <button class="selector melodia" id="selector6" data-audio="Audios/Joropo.mp3"></button>
             </div>
             <div class="fila" data-section="volumen-ritmo">
-                <button class="selector ritmo" id="selector7" data-audio="Audios/porro-tambor-alegre.mp3"></button>
-                <button class="selector ritmo" id="selector8" data-audio="Audios/secar-cacao.mp3"></button>
-                <button class="selector ritmo" id="selector9" data-audio="Audios/marimba-2.mp3"></button>
-                <button class="selector ritmo" id="selector10" data-audio="Audios/cacerolazo.mp3"></button>
+                <button class="selector ritmo" id="selector7" data-audio="Audios/Ritmo_de_Porro_en_alegre.mp3"></button>
+                <button class="selector ritmo" id="selector8" data-audio="Audios/Secar_cacao.mp3"></button>
+                <button class="selector ritmo" id="selector9" data-audio="Audios/Marimba_currulao_2.mp3"></button>
+                <button class="selector ritmo" id="selector10" data-audio="Audios/Cacerolazo.mp3"></button>
             </div>
             <div class="fila" data-section="volumen-fondo">
-                <button class="selector fondo" id="selector11" data-audio="Audios/llovizna-noche-selva.mp3"></button>
-                <button class="selector fondo" id="selector12" data-audio="Audios/rio-loretoyacu.mp3"></button>
-                <button class="selector fondo" id="selector13" data-audio="Audios/gol-del-junior.mp3"></button>
-                <button class="selector fondo" id="selector14" data-audio="Audios/ppn-sanquianga.mp3"></button>
-                <button class="selector fondo" id="selector15" data-audio="Audios/trapiche-de-cana.mp3"></button>
-                <button class="selector fondo" id="selector16" data-audio="Audios/canon_gaviotas_agua_dos_quebradas.mp3"></button>
-                <button class="selector fondo" id="selector17" data-audio="Audios/peque-peque.mp3"></button>
+                <button class="selector fondo" id="selector11" data-audio="Audios/Llovizna_en_la_selva.mp3"></button>
+                <button class="selector fondo" id="selector12" data-audio="Audios/Río_Loretoyacu.mp3"></button>
+                <button class="selector fondo" id="selector13" data-audio="Audios/Gol_del_Junior.mp3"></button>
+                <button class="selector fondo" id="selector14" data-audio="Audios/Aves_del_PNN_Sanquianga.mp3"></button>
+                <button class="selector fondo" id="selector15" data-audio="Audios/Trapiche_de_Caña_de_Azúcar.mp3"></button>
+                <button class="selector fondo" id="selector16" data-audio="Audios/Agua_dos_quebradas.mp3"></button>
+                <button class="selector fondo" id="selector17" data-audio="Audios/Peque_peque.mp3"></button>
                 <button class="selector fondo" id="selector18" data-audio=""></button>
             </div>
             <div class="fila" data-section="volumen-adornos">
-                <button class="selector adornos" id="selector19" data-audio="Audios/me-falta-mi-gente.mp3"></button>
-                <button class="selector adornos" id="selector20" data-audio="Audios/meneando-mijo.mp3"></button>
-                <button class="selector adornos" id="selector21" data-audio="Audios/panochas.mp3"></button>
-                <button class="selector adornos" id="selector22" data-audio="Audios/Gallo.mp3"></button>
-                <button class="selector adornos" id="selector23" data-audio="Audios/20-julio_A la orden veci.mp3"></button>
-                <button class="selector adornos" id="selector24" data-audio="Audios/20-julio_Buzo, gorra, mallas.mp3"></button>
-                <button class="selector adornos" id="selector25" data-audio="Audios/20-julio_Medias.mp3"></button>
-                <button class="selector adornos" id="selector26" data-audio="Audios/20-julio_A_trescientos.mp3"></button>
-                <button class="selector adornos" id="selector27" data-audio="Audios/20-julio_Por este ladito.mp3"></button>
-                <button class="selector adornos" id="selector28" data-audio="Audios/20-julio_Bienvenidos sigan.mp3"></button>
-                <button class="selector adornos" id="selector29" data-audio="Audios/paro-nac_Arengas.mp3"></button>
-                <button class="selector adornos" id="selector30" data-audio="Audios/paro-nac_Pito y tambores.mp3"></button>
-                <button class="selector adornos" id="selector31" data-audio="Audios/paro-nac_Por nuestros muertos.mp3"></button>
-                <button class="selector adornos" id="selector32" data-audio="Audios/musica_arpa_2.mp3"></button>
-                <button class="selector adornos" id="selector33" data-audio="Audios/putumayo_sonido_pajaro.mp3"></button>
-                <button class="selector adornos" id="selector34" data-audio="Audios/Prestame-el-rompope.mp3"></button>
+                <button class="selector adornos" id="selector19" data-audio="Audios/Me_falta_mi_gente.mp3"></button>
+                <button class="selector adornos" id="selector20" data-audio="Audios/Y_yo_voy_meneando_mijo.mp3"></button>
+                <button class="selector adornos" id="selector21" data-audio="Audios/Panochas.mp3"></button>
+                <button class="selector adornos" id="selector22" data-audio="Audios/Gallo_bankiva.mp3"></button>
+                <button class="selector adornos" id="selector23" data-audio="Audios/A_la_orden_veci.mp3"></button>
+                <button class="selector adornos" id="selector24" data-audio="Audios/Buzo,_gorra,_mallas.mp3"></button>
+                <button class="selector adornos" id="selector25" data-audio="Audios/Radiocomercial__medias.mp3"></button>
+                <button class="selector adornos" id="selector26" data-audio="Audios/A_trescientos.mp3"></button>
+                <button class="selector adornos" id="selector27" data-audio="Audios/Por_este_ladito.mp3"></button>
+                <button class="selector adornos" id="selector28" data-audio="Audios/Bienvenidos_sigan.mp3"></button>
+                <button class="selector adornos" id="selector29" data-audio="Audios/Arengas_Paro_Nacional.mp3"></button>
+                <button class="selector adornos" id="selector30" data-audio="Audios/Pitos_y_tambores.mp3"></button>
+                <button class="selector adornos" id="selector31" data-audio="Audios/Por_nuestros_muertos.mp3"></button>
+                <button class="selector adornos" id="selector32" data-audio="Audios/Arpa_2.mp3"></button>
+                <button class="selector adornos" id="selector33" data-audio="Audios/Pájaros_del_Putumayo.mp3"></button>
+                <button class="selector adornos" id="selector34" data-audio="Audios/Prestame_el_rompope.mp3"></button>
             </div>
         </div>
     </div>
